--- a/package.json
+++ b/package.json
@@ -7,10 +7,34 @@
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+	"scripts": {
+		"watch:sass": "node-sass src/sass/main.scss src/index.css -w",
+
+		"compile:sass": "node-sass sass/main.scss public/css/style.comp.css",
+		"prefix:css": "postcss --use autoprefixer -b 'last 10 versions' public/css/style.comp.css -o public/css/style.prefix.css",
+		"compress:css": "node-sass public/css/style.prefix.css public/css/style.css --output-style compressed",
+		"build:css": "npm-run-all compile:sass prefix:css compress:css",
+		"compress:js": "node-minify --compressor 'gcc' --input 'public/js/app.js --output 'public/js/app.min.js'"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "concat": "^1.0.3",
+    "hoek": "^5.0.4",
+    "node-minify": "^3.5.0",
+    "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prescottbreeden/burger_builder.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/prescottbreeden/burger_builder/issues"
+  },
+  "homepage": "https://github.com/prescottbreeden/burger_builder#readme"
 }
